--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "babel": "^6.23.0",
     "chalk": "^2.4.1",
     "enzyme": "^3.7.0",
+    "faker": "^4.1.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "webpack": "^4.26.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "pg": "^7.7.1",
     "sequelize": "^4.41.2"
