--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "chalk": "^2.4.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
+    "eslint": "^5.10.0",
+    "eslint-plugin-react": "^7.11.1",
     "faker": "^4.1.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
@@ -43,8 +45,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "chart.js": "^2.7.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "hsl-to-rgb": "^1.0.0",
+    "patternomaly": "^1.3.2",
     "pg": "^7.7.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
